# robot_arm_UI

./: README.md
robot_control/: CMakeLists.txt  package.xml
robot_control/src/: joint_listener.cpp  move_X_Z.cpp  move_X_Z_5cm.cpp  move_X_Z_copy.cpp
robot_description/meshes/: base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  plate_1.stl
robot_description/urdf/: robot.gazebo  robot.trans  robot.xacro
robot_moveit_config/: .setup_assistant  package.xml
robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  robot.srdf
robot_moveit_config/launch/: robot_UI.launch.py
rviz2_teach_plugin/: CMakeLists.txt  package.xml
rviz2_teach_plugin/src/: teach_plugin copy.cpp  teach_plugin.cpp  teach_plugin_jörn.cpp
rviz_services/: CMakeLists.txt
rviz_services/src/: move_linear_service.cpp
rviz_services/srv/: MoveLinear.srv
